04-LocalDevelopmentTestingAndContinuousIntegration/03-EnablingAddOnsInMinikube/ingress-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-ingress
  template:
    metadata:
      labels:
        app: hello-ingress
    spec:
      containers:
        - name: echoserver
          image: registry.k8s.io/echoserver:1.10
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-ingress
spec:
  selector:
    app: hello-ingress
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello-ingress
                port:
                  number: 80
